# MiniProject

./: CMakeLists.txt  Doxyfile  nrf52840dk_nrf52840.overlay
Documentation/html/: annotated.html  annotated_dup.js  button__task_8c.html  button__task_8c.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  heater__task_8c.html  heater__task_8c.js  index.html  led__task_8c.html  led__task_8c.js  main_8c.html  main_8c.js  navtreedata.js  navtreeindex0.js  rtdb_8h.html  rtdb_8h.js  rtdb_8h_source.html  structa.html  structsystem__state__t.html  structsystem__state__t.js  temp__task_8c.html  temp__task_8c.js
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  (+3 more)
Documentation/latex/: annotated.tex  button__task_8c.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  heater__task_8c.tex  led__task_8c.tex  main_8c.tex  refman.tex  rtdb_8h.tex  rtdb_8h_source.tex  structa.tex  structsystem__state__t.tex  temp__task_8c.tex
src/: MiniProject.code-workspace  button_task.c  heater_task.c  led_task.c  main.c  rtdb.c  rtdb.h  temp_task.c
src/tests/: CMakeLists.txt  test_temp_task.c
